2011-01-28 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* InterfaceGoTopTree: detector eta of objects is read in and passed to particles, 
												Electron_Eg is used temporarily
	* InterfaceD3PD: detector eta of objects is read in and passed to particles
	* Particles: particles can have DetEta as an attribute, can be called with DetEta(index, ptype)
	* Permutations: DetEta as attribute of particlespermuted
	* SelectionTool: DetEta as attribute of selected particles, selection according to DetEta
	* LikelihoodTopLetonJets: bugfix: TFs are chosen according to DetEta, 
														eta/phi parameter for jets are frozen to measured value
	* DetectorAtlas_7TeV: four object dependent eta bins for TFs
	* transferfunctions/ttbar: new energy transferfunctions for bjets, ljets, electron, muon
	* tag KLFitter-00-03-36

2010-12-15 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* InterfaceRoot/GoTopTree/D3PD: multiple input files can be read in defined in input.txt,
	 																trees are collected in a chain
	* runKLFitter*.c: changed according to the different read in  																
	* tag KLFitter-00-03-35
	
2010-12-09 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* InterfaceOutput.cxx, InterfaceOutput.h: indices are now int
	* tag KLFitter-00-03-34

2010-12-08 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* InterfaceD3PD.cxx, Particles.h: pT order for objects and bugfix
	* tag KLFitter-00-03-33

2010-11-30 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* Minor change for minuit status codes
	* tag KLFitter-00-03-32

2010-11-30 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* Fix compiler warnings.
	* tag KLFitter-00-03-31

2010-11-30 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* Fix bug in muon TF.
	* Replace TF warnings by StatusCode 510.
	* tag KLFitter-00-03-30

2010-11-22 Johannes Erdmann <johannes.erdmann@cern.ch>
	