@@ -1,3 +1,8 @@
+2011-01-29 Johannes Erdmann <johannes.erdmann@cern.ch>
+	
+	* replace Muon_DetEta by Muon_Eta
+	* tag KLFitter-00-03-37
+
 2011-01-28 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
 	
 	* InterfaceGoTopTree: detector eta of objects is read in and passed to particles, 
